--- a/README
+++ b/README
@@ -10,3 +10,6 @@ Images from the following:
 http://opengameart.org/content/cat-dog-free-sprites
 http://opengameart.org/content/free-platformer-game-tileset
 http://opengameart.org/content/bevouliin-free-fence-game-background-for-game-developers
+
+Originated Code from 
+https://github.com/rabidgremlin/BunnyRunTut
